--- a/src/main/resources/cz/spsmb/sec/slot_machine/hello-view.fxml
+++ b/src/main/resources/cz/spsmb/sec/slot_machine/hello-view.fxml
@@ -4,11 +4,17 @@
 <?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.spsmb.sec.slot_machine.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Label fx:id="lblScore" text="SCORE: 10000">
+      <font>
+         <Font name="Berlin Sans FB Bold" size="32.0" />
+      </font>
+   </Label>
    <Canvas fx:id="canvas" height="360.0" width="360.0" />
-    <Button onAction="#onSpinButtonClick" text="SPIN" />
+    <Button fx:id="spinButton" onAction="#onSpinButtonClick" text="SPIN" />
 </VBox>
